fixed header top gap and copyright no gap issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,7 @@
 /* ----------------------- header ----------------------- */
+body {
+  margin: 0;
+}
 div {
   display: block;
 }
@@ -167,6 +170,7 @@ footer nav {
 
 .info {
   display: inline-flex;
+  margin-bottom: 10px;
 }
 
 footer .title {
